--- a/Excella.Vending.Web.UI/Web.config
+++ b/Excella.Vending.Web.UI/Web.config
@@ -10,6 +10,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <connectionStrings>
+    <add name="VendingMachineContext" connectionString="Server=.;Database=VendingMachine;Trusted_Connection=True;" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
