Add automatic migrations to project
Now users can select the integration project and run `Update-Database`
to create the DB on `localhost`.

--- a/Excella.Vending.DAL/Excella.Vending.DAL.csproj
+++ b/Excella.Vending.DAL/Excella.Vending.DAL.csproj
@@ -53,6 +53,7 @@
     <Compile Include="EFPaymentDAO.cs" />
     <Compile Include="FakePaymentDAO.cs" />
     <Compile Include="IPaymentDAO.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Payment.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VendingMachineContext.cs" />
