--- a/Excella.Vending.DAL/Excella.Vending.DAL.csproj
+++ b/Excella.Vending.DAL/Excella.Vending.DAL.csproj
@@ -55,12 +55,20 @@
     <Compile Include="EFPaymentDAO.cs" />
     <Compile Include="FakePaymentDAO.cs" />
     <Compile Include="IPaymentDAO.cs" />
+    <Compile Include="Migrations\201707201922165_InitialCreation.cs" />
+    <Compile Include="Migrations\201707201922165_InitialCreation.Designer.cs">
+      <DependentUpon>201707201922165_InitialCreation.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Payment.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VendingMachineContext.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201707201922165_InitialCreation.resx">
+      <DependentUpon>201707201922165_InitialCreation.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
