Whoops, missed a rename from HomeController

--- a/Tests.Integration.Excella.Vending.Web.UI/Tests.Integration.Excella.Vending.Web.UI.csproj
+++ b/Tests.Integration.Excella.Vending.Web.UI/Tests.Integration.Excella.Vending.Web.UI.csproj
@@ -112,7 +112,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HomeControllerTests.cs" />
+    <Compile Include="VendingMachineControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
