extract payment dao test cases

--- a/Tests.Integration.Excella.Vending.Machine/Tests.Integration.Excella.Vending.Machine.csproj
+++ b/Tests.Integration.Excella.Vending.Machine/Tests.Integration.Excella.Vending.Machine.csproj
@@ -64,6 +64,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PaymentDaoTestCases.cs" />
     <Compile Include="VendingMachineTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
