Reference the extracted dao test cases

--- a/Tests.Integration.Excella.Vending.Web.UI/Tests.Integration.Excella.Vending.Web.UI.csproj
+++ b/Tests.Integration.Excella.Vending.Web.UI/Tests.Integration.Excella.Vending.Web.UI.csproj
@@ -132,6 +132,10 @@
       <Project>{e7f2ecfb-8395-482c-9b75-ff7018b8e7ba}</Project>
       <Name>Excella.Vending.Web.UI</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Tests.Integration.Excella.Vending.Machine\Tests.Integration.Excella.Vending.Machine.csproj">
+      <Project>{FA89FAF4-3978-4C4B-9455-C906C18B8002}</Project>
+      <Name>Tests.Integration.Excella.Vending.Machine</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
