Fix a bug: missing connection string

--- a/Tests.Integration.Excella.Vending.Web.UI/app.config
+++ b/Tests.Integration.Excella.Vending.Web.UI/app.config
@@ -44,6 +44,9 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <connectionStrings>
+    <add name="VendingMachineContext" connectionString="Server=.;Database=VendingMachine;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
