--- a/Tests.Unit.Excella.Vending.Domain/packages.config
+++ b/Tests.Unit.Excella.Vending.Domain/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Moq" version="4.2.1510.2205" targetFramework="net452" />
-  <package id="NUnit" version="3.5.0" targetFramework="net452" />
-  <package id="NUnit.Console" version="3.6.0" targetFramework="net452" />
-  <package id="NUnit.ConsoleRunner" version="3.6.0" targetFramework="net452" />
+  <package id="Castle.Core" version="4.1.1" targetFramework="net452" />
+  <package id="Moq" version="4.7.99" targetFramework="net452" />
+  <package id="NUnit" version="3.7.1" targetFramework="net452" />
+  <package id="NUnit.Console" version="3.7.0" targetFramework="net452" />
+  <package id="NUnit.ConsoleRunner" version="3.7.0" targetFramework="net452" />
   <package id="NUnit.Extension.NUnitProjectLoader" version="3.5.0" targetFramework="net452" />
   <package id="NUnit.Extension.NUnitV2Driver" version="3.6.0" targetFramework="net452" />
   <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.5.0" targetFramework="net452" />
