--- a/Tests.Acceptance.Excella.Vending.Machine/App.config
+++ b/Tests.Acceptance.Excella.Vending.Machine/App.config
@@ -1,24 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
+    
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
-  <specFlow>
-    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
-    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
-    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
-    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
-    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
-    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
-    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
-    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
-    <unitTestProvider name="NUnit" />
-    <!--<unitTestProvider name="SpecRun" />-->
-  </specFlow>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" /></configSections>
+  
   <connectionStrings>
-    <add name="VendingMachineContext" connectionString="Server=.;Database=VendingMachine;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+    <add name="VendingMachineContext" connectionString="Server=.\SQLEXPRESS;Initial Catalog=VendingMachine;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -34,4 +23,6 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-</configuration>
+<specFlow>
+    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
+  <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --><unitTestProvider name="NUnit" /></specFlow></configuration>
