--- a/dotnetcore/Excella.Vending.DAL/Excella.Vending.DAL.csproj
+++ b/dotnetcore/Excella.Vending.DAL/Excella.Vending.DAL.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.4.0" />
+    <PackageReference Include="SpecFlow" Version="3.1.67" />
+    <PackageReference Include="SpecFlow.Nunit" Version="3.1.67" />
   </ItemGroup>
 
 </Project>
