--- a/dotnetcore/Excella.Vending.Machine/Excella.Vending.Machine.csproj
+++ b/dotnetcore/Excella.Vending.Machine/Excella.Vending.Machine.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Excella.Vending.Domain\Excella.Vending.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
